--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "pages":[
-    "pages/index/index",
+    "pages/login/index",
     "pages/logs/logs",
     "pages/main/main",
     "pages/userAns/ans",
