修改首页问题下面的操作按钮内容，调整答案页的字体大小。 添加关于页面，以及首页的分享功能，具体分享内容尚未设置。

--- a/client/app.json
+++ b/client/app.json
@@ -4,7 +4,9 @@
     "pages/logs/logs",
     "pages/main/main",
     "pages/userAns/ans",
-    "pages/writeAns/writeAns"
+    "pages/writeAns/writeAns",
+    "pages/writeQue/que",
+    "pages/aboutUs/about"
   ],
   "window":{
     "backgroundTextStyle":"light",
