添加背景页面，并修改其他页面。

--- a/client/app.json
+++ b/client/app.json
@@ -6,7 +6,8 @@
     "pages/userAns/ans",
     "pages/writeAns/writeAns",
     "pages/writeQue/que",
-    "pages/aboutUs/about"
+    "pages/aboutUs/about",
+    "pages/background/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
