server端的功能实现

--- a/project.config.json
+++ b/project.config.json
@@ -4,9 +4,13 @@
 	"miniprogramRoot": "./client",
 	"qcloudRoot": "./server",
 	"setting": {
+		"urlCheck": false,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
 		"newFeature": true
 	},
 	"appid": "wxfd2d55aa914f59f1",
-	"projectname": "we4",
+	"projectname": "oneask",
 	"condition": {}
 }
